:rocket: add functional stuff working process

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,14 @@
 [process1]
+name = process1
 command = python3 process1.py
 restart = true
 
 [process2]
+name = process2
 command = python3 process2.py
+restart = false
+
+[process3]
+name = process2
+command = firefox --new-window
 restart = false
