Add some changes but have to fix

--- a/config.yaml
+++ b/config.yaml
@@ -1,2 +1,8 @@
 proc1: 
-  cmd: python process1.py
+  cmd: /sbin/nginx -c /etc/nginx/nginx.conf
+proc2:
+  cmd: /usr/bin/python3.9 process2.py
+ls_proc:
+  cmd: /bin/ls
+ls_no_bin:
+  cmd: ls
