--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest pexpect
         if [ -f taskmaster/requirements.txt ]; then pip install -r taskmaster/requirements.txt; fi
 
     - name: Lint with flake8
@@ -37,4 +37,4 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest
+        pytest taskmaster/tests/*
