--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -2,9 +2,13 @@ name: Python CI
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, develop, feature/*, set_up_ci]
   pull_request:
-    branches: [main, develop]
+    branches: [main, develop, feature/*, set_up_ci]
+
+defaults:
+  run:
+    working-directory: taskmaster
 
 jobs:
   build:
@@ -30,10 +34,11 @@ jobs:
         pip install flake8 pytest pexpect
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    # - name: Lint with flake8
-    #   run: |
-    #     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-    #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Lint with flake8
+      run: |
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Test with pytest
-      run: python -m pytest --import-mode=append taskmaster/tests/*
+      run: |
+        pytest --import-mode=append tests/*
