--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,4 +4,5 @@ sonar.python.version=3.7, 3.8, 3.9
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=./taskmaster
+# sonar.sources=./taskmaster/
+sonar.python.coverage.reportPaths=taskmaster/coverage.xml
