:construction_worker: getting coverage to work with pexpect.spawn

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,9 @@
 sonar.organization=dofusops
 sonar.projectKey=DofusOps_t4skm4ster
-sonar.python.version=3.7, 3.8, 3.9
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=./taskmaster
+
+sonar.python.version=3.7, 3.8, 3.9
+sonar.python.coverage.reportPaths=coverage.xml
