:construction_worker: debugging coverage.xml read

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -43,6 +43,10 @@ jobs:
       run: |
         pytest tests/* --cov=. --cov-report=xml
 
+    - name: Check dir
+      run: |
+        ls
+
     - name: Scan with SonarCloud
       uses: SonarSource/sonarcloud-github-action@master
       env:
