:construction_worker: add coverage.xml relpath from root

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,4 +6,4 @@ sonar.projectKey=DofusOps_t4skm4ster
 sonar.sources=./taskmaster
 
 sonar.python.version=3.7, 3.8, 3.9
-sonar.python.coverage.reportPaths=coverage.xml
+sonar.python.coverage.reportPaths=taskmaster/coverage.xml
