:construction_worker: reverting coverage.xml path

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,4 +7,4 @@ sonar.projectBaseDir=taskmaster/
 sonar.sources=.
 
 sonar.python.version=3.7, 3.8, 3.9
-sonar.python.coverage.reportPaths=taskmaster/coverage.xml
+sonar.python.coverage.reportPaths=coverage.xml
