--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -6,9 +6,6 @@ on:
   pull_request:
     branches: [main, develop, ci]
 
-defaults:
-  run:
-    working-directory: taskmaster
 
 jobs:
   build:
@@ -32,7 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest pexpect pytest-cov
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f taskmaster/requirements.txt ]; then pip install -r taskmaster/requirements.txt; fi
 
     - name: Lint with flake8
       run: |
@@ -41,7 +38,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest tests/* --cov=. --cov-report=xml
+        pytest tests/* --cov=taskmaster --cov-report=xml
 
     - name: Scan with SonarCloud
       uses: SonarSource/sonarcloud-github-action@master
