--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,7 @@ sonar.projectKey=DofusOps_t4skm4ster
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.projectBaseDir=taskmaster/
-sonar.sources=.
+sonar.sources=taskmaster/
 
 sonar.python.version=3.7, 3.8, 3.9
 sonar.python.coverage.reportPaths=coverage.xml
