--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -40,13 +40,11 @@ jobs:
       run: |
         pytest tests/* --cov=taskmaster --cov-report=xml
 
-    - name: Print coverage.xml
-      run: |
-        cat coverage.xml
-
     - name: Scan with SonarCloud
       uses: SonarSource/sonarcloud-github-action@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} #
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
+    - name: Wait for quality gate
+      run: sonar-scanner wait-for-quality-gate
